<resources>
    <string name="app_name">Layout</string>
    <string name="topButtonTxt">This Button Does Nothing</string>
    <string name="txtAboveTop">I Am Above The Top Button</string>
    <string name="bottomButtonTxt">This Also Does Nothing</string>
    <string name="txtAboveBottom">I Am Above The Bottom Button</string>
    <string name="banana">Banana</string>

    <string name="name1">Mary</string>
    <string name="name2">Pat</string>
    <string name="name3">Tim</string>
    <string name="name4">Pete</string>
    <string name="name5">Jim</string>
</resources>
