<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_relative_layout_example"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="phil.alan.layout.RelativeLayoutExample">

    <TextView
        android:text="@string/name1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/name1" />

    <TextView
        android:text="@string/name2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name1"
        android:id="@+id/name2" />

    <TextView
        android:text="@string/name3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name1"
        android:layout_toRightOf="@+id/name2"
        android:paddingLeft="5dp"
        android:id="@+id/name3"/>

    <TextView
        android:text="@string/name4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingBottom="20dp"
        android:id="@+id/name4"/>

    <TextView
        android:text="@string/name5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:id="@+id/name5"/>
</RelativeLayout>
